<?xml version="1.0"?>
<package>
  <name>rtcm_msgs</name>
  <version>1.0.0</version>
  <description>The rtcm_msgs package contains messages related to data in the RTCM format.</description>
  <maintainer email="tilk@tilk.eu">Marek Materzok</maintainer>
  <license>BSD</license>
  <author email="tilk@tilk.eu">Marek Materzok</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
